--- a/MoviesCorrelationAnalysis/MoviesCorrelationAnalysis.ipynb
+++ b/MoviesCorrelationAnalysis/MoviesCorrelationAnalysis.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "1. **Pearson Correlation Coefficient (Pearson's r):** This commonly used measure is appropriate when both variables are continuous and exhibit a linear relationship. Pearson's r ranges from -1 to 1, indicating perfect negative correlation (-1), perfect positive correlation (1), and no correlation (0).\n",
     "2. **Spearman Rank Correlation (Spearman's ρ):** Used for ordinal or ranked data, Spearman's ρ assesses the monotonic relationship between variables.\n",
-    "3. **Kendall Tau Rank Correlation (Kendall's τ):*** Similar to Spearman's ρ, Kendall's τ measures the strength and direction of association based on concordant and discordant pairs of ranked data points.\n"
+    "3. **Kendall Tau Rank Correlation (Kendall's τ):** Similar to Spearman's ρ, Kendall's τ measures the strength and direction of association based on concordant and discordant pairs of ranked data points.\n"
    ]
   },
   {
